fixed the overflowing problem

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,9 @@
   };
 
 };
-
+body {
+  overflow-x: hidden;
+};
 @font-face {
   font-family: 'Fustat';
   src: url('/fonts/Fustat-ExtraLight.ttf') format('truetype');
